package com.kosmetichka.backend.models.enums;

public enum AppealStatus {
    IN_PROCESS,
    ACCEPTED,
    REJECTED,
    NEW
}
