package com.kosmetichka.backend.models.enums;

public enum AttributeType {
    INT, FLOAT, TEXT, ENUM
}
