package com.kosmetichka.backend.models.enums;

public enum ContactType {
    PHONE, EMAIL, SOCIAL_MEDIA
}
