package com.kosmetichka.backend.models.enums;

public enum ContentType {
    NEWS,
    PROMO
}
