package com.kosmetichka.backend.models.enums;

public enum UserRole {
    ADMIN,
    CREATOR,
    CLIENT,
    SUPPLIER
}
