import type { components } from "@/shared/api/schema";

export type AttributeDto = components["schemas"]["AttributeResponse"];
export type AttributeCreateDto = components["schemas"]["AttributeCreateDto"];
export type AttributeUpdateDto = components["schemas"]["AttributeUpdateDto"];

export type AttributeValueDto = components["schemas"]["AttributeValueResponse"];
export type AttributeValueCreateDto = components["schemas"]["AttributeValueCreateDto"];
